Thu Feb 24 09:35:55 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html (external_parsers): Add references to FAQ 4.8 & 4.9.

Wed Feb 23 13:58:24 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/cgi.cc(init): Fixed bug: array must be free by
	delete [] buf, not just delete buf; (from Vadim).
	* installdir/syntax.html: Fixed a $(WORDS) I'd missed earlier.

Tue Feb 22 12:40:22 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/RELEASE.html, htdoc/main.html: Updated notes for 3.1.5 release.
	* htlib/URL.cc (URL, normalizePath): Fix PR#779, to handle relative
	URLs correctly when there's a trailing ".." or leading "//".

Thu Feb 17 15:58:53 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/RELEASE.html, htdoc/main.html: Add notes for 3.1.5 release.
	* htdoc/TODO.html, htdoc/author.html, htdoc/bugs.html,
	htdoc/cf_general.html, htdoc/cf_types.html, htdoc/cf_variables.html,
	htdoc/config.html, htdoc/howitworks.html, htdoc/htdig.html,
	htdoc/htfuzzy.html, htdoc/htmerge.html, htdoc/htnotify.html,
	htdoc/hts_form.html, htdoc/hts_general.html, htdoc/hts_method.html,
	htdoc/install.html, htdoc/isp.html, htdoc/mailing.html,
	htdoc/meta.html, htdoc/notification.html, htdoc/require.html,
	htdoc/uses.html, htdoc/where.html: Update copyright date and fix
	last modified date for automatic CVS update.

Thu Feb 17 14:37:18 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/htdig.conf: quote all HTML tag parameters.
	* htsearch/TemplateList.cc (createFromString), installdir/long.html,
	installdir/short.html: Use $&(URL) in templates.

Thu Feb 17 14:01:34 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.1.5.spec: Fix silly typos in %post script,
	make cron script a %config file.

Thu Feb 17 10:34:05 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	[ Improve htsearch's HTML 4.0 compliance ]
	* htsearch/TemplateList.cc (createFromString): Use file name rather