@@ -2868,7 +2868,16 @@
 			<em>example:</em>
 		  </dt>
 		  <dd>
-			local_default_doc: default.html
+			<table border="0">
+			  <tr>
+				<td valign="top">
+				  local_default_doc:
+				</td>
+				<td nowrap>
+				     default.html default.htm index.html index.htm
+				</td>
+			  </tr>
+			</table>
 		  </dd>
 		</dl>
 	  </dd>
@@ -5087,7 +5096,7 @@
 			<em>description:</em>
 		  </dt>
 		  <dd>
-		        Overrides the value of the SCRIPT_NAME
+			Overrides the value of the SCRIPT_NAME
 			environment attribute. This is useful if
 			htsearch is not being called directly as a CGI
 			program, but indirectly from within a dynamic
@@ -7419,7 +7428,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 <!-- hhmts start -->
-Last modified: $Date: 2000/02/24 15:40:45 $
+Last modified: $Date: 2000/02/24 15:57:19 $
 <!-- hhmts end -->
   </body>
 </html>
