@@ -1,6 +1,7 @@
-Thu Feb 24 09:35:55 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+Thu Feb 24 09:52:10 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdoc/attrs.html (external_parsers): Add references to FAQ 4.8 & 4.9.
+	(local_default_doc): Give an expanded example.
 
 Wed Feb 23 13:58:24 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
